--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 python=3.6.8
 h5py==2.10.0
 ipykernel==5.1.3
-ipython==7.9.0
+ipython>=7.16.3
 ipython-genutils==0.2.0
 jupyter-client==5.3.4
 jupyter-core==4.6.1
