--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ jupyter-client==5.3.4
 jupyter-core==4.6.1
 Markdown==3.1.1
 matplotlib==3.1.2
-numpy==1.17.4
+numpy>=1.21
 scikit-image==0.16.2
 scipy==1.3.3
 tensorboard==2.0.1
